--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -121,7 +121,7 @@
 
 
 
-        <script src="js/angular.min.js"></script>
+        <script src="js/angular.js"></script>
         <script src="js/angular-route.min.js"></script>
         <script src="js/angular-resource.min.js"></script>
         <script src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
@@ -137,6 +137,8 @@
         <script src="js/entityService.js"></script>
         <script src="js/users.js"></script>
         <script src="js/security/loginservice.js"></script>
+        <script src="js/security/authnotifier.js"></script>
+        <script src="js/security/requestBuffer.js"></script>
         <script src="js/breadcrumb.js"></script>
         <script src="js/ngdirectives.js"></script>
         <script src="js/toastr.js"></script>
