--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -23,8 +23,8 @@
     </head>
 
     <body>
-
-        <div id="wrapper" >
+        <div><h2>{{mode}}</h2></div>
+        <div id="wrapper" ng-hide="mode" >
 
             <nav  class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><h1>Massmaller</h1></a>
+                    <a class="navbar-brand" href="index.html"><h1>Massmaller: {{mode}}</h1></a>
                 </div>
                 <!-- /.navbar-header -->
 
@@ -59,7 +59,7 @@
                 </ul>
                 <!-- /.navbar-top-links -->
 
-                <div class="navbar-static-side" role="navigation" ng-show="isLogedIn">
+                <div class="navbar-static-side" role="navigation" >
                     <div class="sidebar-collapse ">
                         <ul class="nav" id="side-menu">
 
@@ -100,8 +100,9 @@
                 <!-- /.row -->
             </div>
             <!-- /#page-wrapper -->
-
+          
         </div>
+          <login  ></login>
         <!-- /#wrapper -->
 
         <!-- Core Scripts - Include with every page -->
@@ -128,13 +129,14 @@
         <script src="js/angular-cookies.min.js"></script>
         <script src = "js/massmailer.js" ></script>
         <script src="js/menu.js"></script>
+        <script src="js/entityService.js"></script>
         <script src="js/datasource.js"></script>
         <script src="js/campain.js"></script>
         <script src="js/email.js"></script>
         <script src="js/dashboard.js"></script>
         <script src="js/stats.js"></script>
         <script src="js/fileUpload.js"></script>
-        <script src="js/entityService.js"></script>
+
         <script src="js/users.js"></script>
         <script src="js/security/loginservice.js"></script>
         <script src="js/security/authnotifier.js"></script>
