--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -23,7 +23,6 @@
     </head>
 
     <body>
-        <div><h2>{{mode}}</h2></div>
         <div id="wrapper" ng-hide="mode" >
 
             <nav  class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="margin-bottom: 0">
@@ -45,10 +44,9 @@
                             <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#">{{user.firstName}} {{user.lastName}}<i class="fa fa-user fa-fw"></i> User Profile</a>
+                            <li><a ng-href="#users/{{user.id}}">{{user.firstName}} {{user.lastName}}<i class="fa fa-user fa-fw"></i> User Profile</a>
                             </li>
-                            <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                            </li>
+
                             <li class="divider"></li>
                             <li><a href="#" ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                             </li>
