--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -23,9 +23,7 @@
     </head>
 
     <body>
-        <div><h2>{{mode}}</h2></div>
         <div id="wrapper" ng-hide="mode" >
-
             <nav  class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
@@ -41,16 +39,15 @@
                 <ul class="nav navbar-top-links navbar-right" ng-controller="LoginCtrl">
 
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{user.firstName}} {{user.lastName}}
+                        <a class="dropdown-toggle" data-toggle="dropdown"  >{{user.firstName}} {{user.lastName}}
                             <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                            <li><a ng-href="#users/{{user.id}}" ><i class="fa fa-user fa-fw"></i> User Profile</a>
                             </li>
                             <li><a href="#/users"><i class="fa fa-user fa-fw"></i> Users</a>
                             </li>
-                            <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                            </li>
+            
                             <li class="divider"></li>
                             <li><a href="#" ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                             </li>
