--- a/src/main/webapp/WEB-INF/ui/static/home.html
+++ b/src/main/webapp/WEB-INF/ui/static/home.html
@@ -33,7 +33,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><h1>Massmaller</h1></a>
+                    <a class="navbar-brand" href="home.html"><h1>Massmaller</h1></a>
                 </div>
                 <!-- /.navbar-header -->
 
