--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -9,16 +9,16 @@
         <title>Massmaller</title>
 
         <!-- Core CSS - Include with every page -->
-        <link href="ui/css/bootstrap.min.css" rel="stylesheet">
-        <link href="ui/font-awesome/css/font-awesome.css" rel="stylesheet">
+        <link href="ui/static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="ui/static/font-awesome/css/font-awesome.css" rel="stylesheet">
 
         <!-- Page-Level Plugin CSS - Dashboard -->
-        <link href="ui/css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
-        <link href="ui/css/plugins/timeline/timeline.css" rel="stylesheet">
+        <link href="ui/static/css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
+        <link href="ui/static/css/plugins/timeline/timeline.css" rel="stylesheet">
 
         <!-- SB Admin CSS - Include with every page -->
-        <link href="ui/css/sb-admin.css" rel="stylesheet">
-        <link href="ui/css/custom.css" rel="stylesheet">
+        <link href="ui/static/css/sb-admin.css" rel="stylesheet">
+        <link href="ui/static/css/custom.css" rel="stylesheet">
 
     </head>
 
@@ -94,10 +94,7 @@
                 <!-- /.navbar-static-side -->
             </nav>
 
-            <div ng-view  id="page-wrapper">
-
-                <!-- /.row -->
-            </div>
+            <div ng-view  id="page-wrapper" ></div>
             <!-- /#page-wrapper -->
           
         </div>
@@ -105,48 +102,45 @@
         <!-- /#wrapper -->
 
         <!-- Core Scripts - Include with every page -->
-        <script src="ui/js/jquery-1.10.2.js"></script>
-        <script src="ui/js/bootstrap.min.js"></script>
-        <script src="ui/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+        <script src="ui/static/js/jquery-1.10.2.js"></script>
+        <script src="ui/static/js/bootstrap.min.js"></script>
+        <script src="ui/static/js/plugins/metisMenu/jquery.metisMenu.js"></script>
 
         <!-- Page-Level Plugin Scripts - Dashboard -->
-        <script src="ui/js/plugins/morris/raphael-2.1.0.min.js"></script>
-        <script src="ui/js/plugins/morris/morris.js"></script>
+        <script src="ui/static/js/plugins/morris/raphael-2.1.0.min.js"></script>
+        <script src="ui/static/js/plugins/morris/morris.js"></script>
 
         <!-- SB Admin Scripts - Include with every page -->
-        <script src="ui/js/sb-admin.js"></script>
+        <script src="ui/static/js/sb-admin.js"></script>
 
 
 
 
 
 
-        <script src="ui/js/angular.js"></script>
-        <script src="ui/js/angular-route.min.js"></script>
-        <script src="ui/js/angular-resource.min.js"></script>
-        <script src="ui/js/ui-bootstrap-tpls-0.11.0.min.js"></script>
-        <script src="ui/js/angular-cookies.min.js"></script>
-        <script src = "ui/js/massmailer.js" ></script>
-        <script src="ui/js/menu.js"></script>
-        <script src="ui/js/entityService.js"></script>
-        <script src="ui/js/datasource.js"></script>
-        <script src="ui/js/campain.js"></script>
-        <script src="ui/js/email.js"></script>
-        <script src="ui/js/dashboard.js"></script>
-        <script src="ui/js/stats.js"></script>
-        <script src="ui/js/fileUpload.js"></script>
+        <script src="ui/static/js/angular.js"></script>
+        <script src="ui/static/js/angular-route.min.js"></script>
+        <script src="ui/static/js/angular-resource.min.js"></script>
+        <script src="ui/static/js/ui-bootstrap-tpls-0.11.0.min.js"></script>
+        <script src="ui/static/js/angular-cookies.min.js"></script>
+        <script src = "ui/static/js/massmailer.js" ></script>
+        <script src="ui/static/js/menu.js"></script>
+        <script src="ui/static/js/entityService.js"></script>
+        <script src="ui/static/js/datasource.js"></script>
+        <script src="ui/static/js/campain.js"></script>
+        <script src="ui/static/js/email.js"></script>
+        <script src="ui/static/js/dashboard.js"></script>
+        <script src="ui/static/js/stats.js"></script>
+        <script src="ui/static/js/fileUpload.js"></script>
 
-        <script src="ui/js/users.js"></script>
-        <script src="ui/js/security/loginservice.js"></script>
-        <script src="ui/js/security/authnotifier.js"></script>
-        <script src="ui/js/security/requestBuffer.js"></script>
-        <script src="ui/js/breadcrumb.js"></script>
-        <script src="ui/js/ngdirectives.js"></script>
-        <script src="ui/js/toastr.js"></script>
-
-
-
-        <script src="ui/js/ckeditor/ckeditor.js"></script>
+        <script src="ui/static/js/users.js"></script>
+        <script src="ui/static/js/security/loginservice.js"></script>
+        <script src="ui/static/js/security/authnotifier.js"></script>
+        <script src="ui/static/js/security/requestBuffer.js"></script>
+        <script src="ui/static/js/breadcrumb.js"></script>
+        <script src="ui/static/js/ngdirectives.js"></script>
+        <script src="ui/static/js/toastr.js"></script>
+        <script src="ui/static/js/ckeditor/ckeditor.js"></script>
     </body>
 
 </html>
